# voceos-hack

./: CLAUDE.md  browser_control.py  config.yaml  macos_control.py  pyproject.toml  server.py  start.sh
docs/: android-control-research.md  droidrun-research.md
nakura/: CLAUDE.md  pyproject.toml  server.py
