[project]
name = "voceos-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "droidrun[anthropic]",
    "lxml>=6.0.2",
    "mcp>=1.27.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scrapling[all]>=0.4.3",
]

[tool.uv.sources]
droidrun = { path = "../voceos-droidrun" }
